--- a/GrupoDiolTexture3.html
+++ b/GrupoDiolTexture3.html
@@ -1050,7 +1050,7 @@ function initialize()
 		
 		myObj1 = obj1;
 		obj1.scale.set(1,1,1);
-		obj1.position.y += 0;
+		obj1.position.y = -2.6;
 		obj1.position.z = 200;
 		obj1.rotation.z += 110;
 		obj1.rotation.x += 0;
@@ -1058,6 +1058,17 @@ function initialize()
 		
 		
 		
+	} );
+	var objecttwoLoader9 = new THREE.ObjectLoader();
+	objecttwoLoader9.load( "models/53mm-screw-in-plug.json", function ( obj9 ) {
+	//objectLoader.load( "models/gold-star.json", function ( obj ) {
+		
+		myObj9 = obj9;
+		obj9.scale.set(0.04,0.04,0.04);
+		obj9.rotation.z += 110;
+		obj9.rotation.x += 90;
+		obj9.position.y = -2;
+		markerRoot1.add( obj9 );
 	} );
 	/**
 	var objecttwoLoader2 = new THREE.ObjectLoader();
@@ -1174,17 +1185,17 @@ var mainLoop = () => {
   console.log("funciona mainloop")
   var time = performance.now() * 0.0025;
   var time2 = performance.now() * 0.004;
-  var orbitRadius = 8;
+  var orbitRadius = 10;
   var orbitRadius1 = 2;
   var orbitRadius3 = 0.10;
   myObj1.rotation.x += Math.PI / 180
   //myObj1.rotation.y += Math.PI / 180
-  myObj1.position.y = orbitRadius * -Math.cos( time );
+  myObj1.position.z = orbitRadius * Math.tan( time ) ;
   myObj2.position.y = orbitRadius1 * Math.tan( time );
   //myObj4
   myObj4.position.z = orbitRadius3 * Math.cos( time2 );
   //myObj1.rotation.y += Math.PI / 180
-  myObj1.position.z = Math.sin( time ) * 5 + 0.5;
+  //myObj1.position.z = Math.sin( time ) * 5 + 0.5;
   myObj7.rotation.z = Math.cos( time ) * 0.1 + 3.2 ;
   //myObj1.rotation.x = time * 0.5;
   //myObj1.rotation.z = time * 0.51;
