posicion nuevo cañon fixed

--- a/KitVitLuzcanon2.html
+++ b/KitVitLuzcanon2.html
@@ -960,8 +960,9 @@ function initialize()
 		obj.scale.set(0.0009,0.0009,0.0009);
 		obj.rotation.z += 110;
 		obj.rotation.x += 90;
-		obj.position.z += 2.3;
+		obj.position.z += 1.7;
 		obj.position.x += 0.5;
+		obj.position.y = -1.37;
 		markerRoot1.add( obj );
 	} );
 	/*
@@ -1112,7 +1113,7 @@ function initialize()
 		obj2.rotation.x += 84;
 		obj2.rotation.y += 55;
 		obj2.position.y = 1.5;
-		obj2.position.z = 1.8;
+		obj2.position.z = 1.25;
 		obj2.position.x = 0.05;
 		markerRoot1.add( obj2 );
 		
