--- a/KitVitLuzcanon3.html
+++ b/KitVitLuzcanon3.html
@@ -988,8 +988,7 @@ function initialize()
 		obj4.rotation.x += 90;
 		obj4.rotation.y += 110;
 		obj4.position.y = 0.15;
-		obj4.position.z = -2;
-		console.log("no lee");
+		obj4.position.z = 5;
 		obj4.position.x = -0.9;
 		markerRoot1.add( obj4 );
 	} );
@@ -1066,18 +1065,35 @@ function initialize()
 		
 	} );
 	var objecttwoLoader9 = new THREE.ObjectLoader();
-	objecttwoLoader9.load( "models/53mm-screw-in-plug.json", function ( obj9 ) {
+	objecttwoLoader9.load( "models/jar.json", function ( obj9 ) {
 	//objectLoader.load( "models/gold-star.json", function ( obj ) {
 		obj9.traverse( function ( child ) {
 			if ( child instanceof THREE.Mesh )
-			child.material = new THREE.MeshLambertMaterial({color: 0x6AA84F});
+			child.material = new THREE.MeshLambertMaterial({color: 0x94133a});
 });
 		myObj9 = obj9;
-		obj9.scale.set(0.04,0.04,0.04);
+		obj9.scale.set(0.6,0.6,0.6);
 		obj9.rotation.z += 110;
 		obj9.rotation.x += 90;
-		obj9.position.y = -2;
+		obj9.position.y = -2.2;
+		obj9.position.z = 1;
 		markerRoot1.add( obj9 );
+	} );
+	var objecttwoLoader11 = new THREE.ObjectLoader();
+	objecttwoLoader11.load( "models/standard-wall-pvc-pipe-fitting-for-water.json", function ( obj11 ) {
+	//objectLoader.load( "models/gold-star.json", function ( obj ) {
+		obj11.traverse( function ( child ) {
+			if ( child instanceof THREE.Mesh )
+			child.material = new THREE.MeshLambertMaterial({color: 0x6AA84F});
+});
+		myObj11 = obj11;
+		obj11.scale.set(15,15,15);
+		//obj11.rotation.z += 110;
+		obj11.rotation.x += 90;
+		obj11.position.y = -2.2;
+		obj11.position.z = 0.2;
+		obj11.position.x = -2;
+		markerRoot1.add( obj11 );
 	} );
 	/**
 	var objecttwoLoader2 = new THREE.ObjectLoader();
@@ -1196,13 +1212,13 @@ var mainLoop = () => {
   var time2 = performance.now() * 0.004;
   var orbitRadius = 1;
   var orbitRadius1 = 2;
-  var orbitRadius3 = 0.10;
+  var orbitRadius3 = 0.08;
   myObj1.rotation.x += Math.PI / 180
   //myObj1.rotation.y += Math.PI / 180
   myObj1.position.z = orbitRadius * Math.tan( time ) ;
   myObj2.position.y = orbitRadius1 * Math.tan( time );
   //myObj4
-  myObj4.position.z = orbitRadius3 * Math.cos( time2 );
+  myObj4.position.z = orbitRadius3 * Math.cos( time2 ) + 0.15;
   //myObj1.rotation.y += Math.PI / 180
   //myObj1.position.z = Math.sin( time ) * 5 + 0.5;
   myObj7.rotation.z = Math.cos( time ) * 0.1 + 3.2 ;
